--- a/demos/src/scss/header.scss
+++ b/demos/src/scss/header.scss
@@ -1,1 +1,3 @@
+$o-header-primary-left-width: (default: 80px, M:  303px);
+
 @import "demo";
